--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gphBackend",
+  "name": "gphPlantas",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,7 +13,19 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-	"mongodb": "*",
+    "mongodb": "*",
     "mongoskin": "*"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ovsleep/gph-plantas.git"
+  },
+  "author": "ovsleep",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ovsleep/gph-plantas/issues"
+  },
+  "homepage": "https://github.com/ovsleep/gph-plantas"
 }
