--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "gphPlantas",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "mongodb": "*",
-    "mongoskin": "*"
-  },
+  "name": "gph-plantas",
+  "version": "1.0.0",
+  "description": "",
   "main": "app.js",
+  "dependencies": {
+    "body-parser": "^1.0.2",
+    "cookie-parser": "^1.0.1",
+    "connect-multiparty": "^1.2.5",
+    "debug": "^0.7.4",
+    "excel-parser": "^0.2.2",
+    "express": "^4.2.0",
+    "fast-csv": "^0.5.4",
+    "jade": "^1.3.1",
+    "mongodb": "^1.4.12",
+    "mongoskin": "^1.4.4",
+    "morgan": "^1.0.1",
+    "nodemailer": "^1.3.0",
+    "node-uuid": "^1.4.1",
+    "static-favicon": "^1.0.2"
+  },
   "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ovsleep/gph-plantas.git"
   },
-  "author": "ovsleep",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ovsleep/gph-plantas/issues"
