--- a/gph-plantas.csproj
+++ b/gph-plantas.csproj
@@ -125,6 +125,7 @@
     <Content Include="public\views\login.html" />
     <Content Include="public\views\productModal.html" />
     <Content Include="public\views\account.html" />
+    <Content Include="public\views\productsList.html" />
     <Content Include="routes\backend.js" />
     <Content Include="views\error.jade" />
     <Content Include="views\index.jade" />
