agrego delete de productos en backend

--- a/gph-plantas.csproj
+++ b/gph-plantas.csproj
@@ -120,8 +120,124 @@
     <Content Include="public\font-awesome-4.1.0\css\font-awesome.min.css" />
     <Content Include="public\font-awesome-4.1.0\fonts\fontawesome-webfont.svg" />
     <Content Include="public\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="public\images\Acelga.png" />
+    <Content Include="public\images\ajo.png" />
+    <Content Include="public\images\Albahaca.png" />
+    <Content Include="public\images\Alcaucil.png" />
+    <Content Include="public\images\Anturio.png" />
+    <Content Include="public\images\apio.png" />
+    <Content Include="public\images\Arandano.png" />
+    <Content Include="public\images\Arandanos.png" />
+    <Content Include="public\images\bananaBrasilera.png" />
+    <Content Include="public\images\bananaEcuador.png" />
+    <Content Include="public\images\Berengenas.png" />
+    <Content Include="public\images\Berro.png" />
+    <Content Include="public\images\Blanco.png" />
+    <Content Include="public\images\Boniato.png" />
+    <Content Include="public\images\brocoli.png" />
+    <Content Include="public\images\brocoli2.png" />
+    <Content Include="public\images\brotesAlfalfa.png" />
+    <Content Include="public\images\brotesRabanito.png" />
+    <Content Include="public\images\brotesSoja.png" />
+    <Content Include="public\images\calabacin.png" />
+    <Content Include="public\images\calabacin1.png" />
+    <Content Include="public\images\Calabacin2.png" />
+    <Content Include="public\images\calabacin3.png" />
+    <Content Include="public\images\calabacín.png" />
+    <Content Include="public\images\calabaza.png" />
+    <Content Include="public\images\Caqui.png" />
+    <Content Include="public\images\Caquí.png" />
+    <Content Include="public\images\cebolla.png" />
+    <Content Include="public\images\cebollaBlanca.png" />
+    <Content Include="public\images\cebollaMorada.png" />
+    <Content Include="public\images\cebolla_morada.png" />
+    <Content Include="public\images\champignonBandeja.png" />
+    <Content Include="public\images\champinon_bandeja.png" />
+    <Content Include="public\images\Chaucha.png" />
+    <Content Include="public\images\Choclo.png" />
+    <Content Include="public\images\Ciboulette.png" />
+    <Content Include="public\images\Ciruelas.png" />
+    <Content Include="public\images\Coliflor.png" />
+    <Content Include="public\images\Crisantemos.png" />
+    <Content Include="public\images\durazno.png" />
+    <Content Include="public\images\echalote.png" />
+    <Content Include="public\images\Endivia.png" />
+    <Content Include="public\images\Escarola.png" />
+    <Content Include="public\images\Espinaca.png" />
+    <Content Include="public\images\Kalanchoe.png" />
+    <Content Include="public\images\laurel.png" />
+    <Content Include="public\images\lechugaCrespa.png" />
+    <Content Include="public\images\lechugaMorada.png" />
+    <Content Include="public\images\lechuga_mantecosa.png" />
+    <Content Include="public\images\limones.png" />
+    <Content Include="public\images\Limón.png" />
+    <Content Include="public\images\maiz_cocido.jpg" />
+    <Content Include="public\images\maiz_cocido.png" />
+    <Content Include="public\images\mandarinaMurcott.png" />
+    <Content Include="public\images\Mango.png" />
+    <Content Include="public\images\Manzana red.png" />
+    <Content Include="public\images\manzanaVerde.png" />
+    <Content Include="public\images\manzana_verde.png" />
+    <Content Include="public\images\Melón.png" />
+    <Content Include="public\images\Morrón rojo.png" />
+    <Content Include="public\images\Morrón verde.png" />
+    <Content Include="public\images\MorrónRojo.png" />
+    <Content Include="public\images\MorrónVerde.png" />
+    <Content Include="public\images\Nabo.png" />
+    <Content Include="public\images\naranja.png" />
+    <Content Include="public\images\naranja_extra.png" />
+    <Content Include="public\images\Palta.png" />
+    <Content Include="public\images\Papa blanca .png" />
+    <Content Include="public\images\papa blanca.png" />
+    <Content Include="public\images\Papa rosada.png" />
+    <Content Include="public\images\PapaBlanca .png" />
+    <Content Include="public\images\PapaRosada.png" />
+    <Content Include="public\images\papaya.png" />
+    <Content Include="public\images\PedidoRapido.png" />
+    <Content Include="public\images\pepino.png" />
+    <Content Include="public\images\Pera.png" />
+    <Content Include="public\images\perejil.png" />
+    <Content Include="public\images\pimiento_rojo.png" />
+    <Content Include="public\images\pimiento_verde.png" />
+    <Content Include="public\images\platano_canario.png" />
+    <Content Include="public\images\Pomelo.png" />
+    <Content Include="public\images\pomeloRosado.png" />
+    <Content Include="public\images\Primulas.png" />
+    <Content Include="public\images\Puerro.png" />
+    <Content Include="public\images\Quinoto.png" />
+    <Content Include="public\images\rabanito.png" />
+    <Content Include="public\images\rabano.png" />
+    <Content Include="public\images\Remolacha.png" />
+    <Content Include="public\images\RepollitoBruselas.png" />
+    <Content Include="public\images\Repollitos bruselas.png" />
+    <Content Include="public\images\Repollo blanco.png" />
+    <Content Include="public\images\Repollo morado.png" />
+    <Content Include="public\images\RepolloBlanco.png" />
+    <Content Include="public\images\RepolloMorado.png" />
+    <Content Include="public\images\Romero.png" />
+    <Content Include="public\images\rucula.png" />
+    <Content Include="public\images\sandiaRayada.png" />
+    <Content Include="public\images\sandia_rayada.png" />
+    <Content Include="public\images\site\TituloPuestoencasa1.png" />
+    <Content Include="public\images\site\TituloPuestoencasa2.png" />
+    <Content Include="public\images\site\TituloPuestoencasa3.png" />
+    <Content Include="public\images\SliderFinal\SliderF4.png" />
+    <Content Include="public\images\TituloGPH.png" />
+    <Content Include="public\images\Tomate americano.png" />
+    <Content Include="public\images\TomateAmericano.png" />
+    <Content Include="public\images\tomateCherry.png" />
+    <Content Include="public\images\tomate_cherry_bandeja.png" />
+    <Content Include="public\images\uvaBlanca.png" />
+    <Content Include="public\images\uvaRoja.png" />
+    <Content Include="public\images\Zanahoria.png" />
+    <Content Include="public\images\Zapallito.png" />
+    <Content Include="public\images\Zapallo.png" />
+    <Content Include="public\images\ZapalloCabutia.png" />
+    <Content Include="public\images\Zucchini.png" />
     <Content Include="public\js\ui-bootstrap-tpls-0.11.2.min.js" />
     <Content Include="public\styles\bootstrap.css" />
+    <Content Include="public\views\Contacto.html" />
+    <Content Include="public\views\Instrucciones.html" />
     <Content Include="public\views\login.html" />
     <Content Include="public\views\productModal.html" />
     <Content Include="public\views\account.html" />
