--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "morgan": "^1.6.1",
     "nodemailer": "^1.5.0",
     "node-uuid": "^1.4.3",
-    "static-favicon": "^2.0.0-alpha"
+    "static-favicon": "^2.0.0-alpha",
+	"sendgrid": "^3.0.5"
   },
   "devDependencies": {},
   "scripts": {
